--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">谷歌电子市场s</string>
     <string name="_1000">1000</string>
+    <string name="drawer_open">打开</string>
+    <string name="drawer_close">关闭</string>
 
     <string-array name="tab_names">
         <item>首页</item>
